# MultiscaleStokes

./: .gitignore  CMakeLists.txt  README.md
data/: 2D-test-01.prm  3D-test-01.in  3D-test-01.prm
doc/: Doxyfile
include/base/: config.h  utilities.h
include/core/: domain_geometry.h  domain_geometry.tpp  multiscale_stokes_model.h  multiscale_stokes_model.tpp  stokes_model.h  stokes_model.tpp  stokes_model_assembly.h  stokes_model_assembly.tpp
include/functions/: basis_q1.h  basis_q1.tpp  function_concatinator.hpp  shape_fun_vector.hpp  shape_fun_vector_divergence.hpp  shape_function_scalar.hpp
include/linear_algebra/: approximate_inverse.hpp  approximate_schur_complement.hpp  block_schur_preconditioner.hpp  inverse_matrix.hpp  local_inner_preconditioner.hpp  preconditioner_block_identity.h  preconditioner_block_identity.hpp  schur_complement.hpp
include/model_data/: core_model_data.h  core_model_data.tpp  physical_constants.h  reference_quantities.h  stokes_model_data.h  stokes_model_data.tpp  stokes_model_parameters.h
include/multiscale_basis/: divergence_conforming_basis..tpp  divergence_conforming_basis.h  divergence_stabilized_basis..tpp  divergence_stabilized_basis.h  divergence_stabilized_basis.tpp
include/postprocessor/: postprocessor.h  postprocessor.tpp
source/: CMakeLists.txt  main.cxx  multi_stokes.cxx
source/base/: utilities.cc
source/core/: domain_geometry.inst.cc  multiscale_stokes_model.inst.cc  stokes_model.inst.cc  stokes_model_assembly.inst.cc
source/functions/: basis_q1.inst.cc
source/model_data/: core_model_data.inst.cc  physical_constants.cc  reference_quantities.cc  stokes_model_data.inst.cc  stokes_model_parameters.cc
source/multiscale_basis/: divergence_stabilized_basis.inst.cc
source/postprocessor/: postprocessor.inst.cc
test/: CMakeLists.txt
